--- a/docfx_project/site/home/techguides/user-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/user-creation-in-paas.html
@@ -82,41 +82,71 @@
 <h1 id="introduction">Introduction</h1>
 
 <p>This document can be used by technical staff who need to create Users on the Temenos Continuous Deployment Platform and associate to each user a ssh key. </p>
-<h2 id="users"><strong>Users</strong></h2>
-<hr>
-<p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. This way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
-<p>The users can access their organisation only, view their user profiles and change their password. Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
-<h1 id="use-putty-ssh-client-for-ssh-key-generation">Use PuTTY ssh client for ssh key generation.</h1>
-<p>You can use any other ssh key generator client.</p>
-<div class="NOTE"><h5>Note</h5><p>If you already have installed a ssh key generator client, you can skip this step.</p>
-</div>
-<p>•   Download the installer from <a href="http://www.putty.org/" title="http://www.putty.org/">http://www.putty.org/</a></p>
-<p><img src="images/putty-download.png" alt="putty download"></p>
-<p>•   Run the installer and click <strong>Next</strong> on each screen, without changing anything in configurations. Click <strong>Finish</strong> once completed.</p>
-<h1 id="create-ssh-keys-pair-public-and-private-keys">Create SSH keys (pair public and private keys)</h1>
-<p>•   Open PuTTYgen and click Generate button:</p>
-<p><img src="images/putty-keygen.png" alt="putty keygen"></p>
-<p>•   This creates a new ssh key by moving the mouse in the blank area(highlighted in red), as per bellow picture.</p>
-<p><img src="images/putty-keygen-random.png" alt="generate ssh key"></p>
-<p>•   After Puttygen finished key generation, you can save your public key/private key in any location from your local machine.</p>
-<div class="NOTE"><h5>Note</h5><p>In order to have a valid ssh key that can be recognized by 
- Infrastructure, do not use the Save public key button from Puttygen and just select the whole public key from the PuTTYgen screen and save it in your local machine.</p>
-</div>
-<p><img src="images/putty-keygen-publickey.png" alt="save public key"></p>
-<p>•   From PuTTYgen screen, you must also save the private key. Press the Save private key button, choose Yes on the next prompt (save the key without a passphrase to protect it) and indicate a name and location for the private key.</p>
-<p><img src="images/putty-keygen-privatekey.png" alt="save private key"></p>
-<p>•   The public/private key location on your local machine should look like this:</p>
-<p><img src="images/putty-keygen-keyslocation.png" alt="public/private keys location"></p>
-<h1 id="add-users-in-portal-with-ssh-key">Add users in portal with SSH key</h1>
+<h2 id="how-to-create-users">How to create <strong>Users</strong></h2>
+<p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. In this way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
+<p>The users can access their organisation only, view their user profiles and change their password. Note that only the users with the &#39;Amin&#39; permission can create more users. To create a new user, please refer to the below:</p>
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
 <p><img src="images/user-login.png" alt="portal login"></p>
 <p>•   Go to the menu on the left and then click Users tab, as below:</p>
 <p><img src="images/users-tab.png" alt="new user"> </p>
 <p>The first screen that you will see is the one for the existing user (usually admin).</p>
 <p>Click <strong>New user</strong> button on the top-right corner:</p>
-<p><img src="./images/user-new.png" alt="new user"></p>
+<p><img src="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\techguides\images\users-tab.png" alt=""></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
-<p><strong>Create a new user:</strong></p>
+<h1 id="user-roles-management">User Roles Management</h1>
+<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).
+The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
+<p><img src="images/create-user-role.png" alt="user"></p>
+<p>The admin can select which permissions to set to each user.
+<img src="images/create-user-role-permissions.png" alt="user"></p>
+<p>Once the role is created, the admin can assign it to a specific user:</p>
+<ul>
+<li>go to the &#39;Users&#39; tab and select the user </li>
+<li>choose from the drop-down list the user </li>
+<li>click &#39;Edit&#39; on the user</li>
+<li>choose from the drop-down list the role that needs to be assigned </li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click here to get an overview of the permissions.</p>
+<p>Please find below a set of recommended user roles for your organisation:</p>
+<p><img src="images/create-user-select-role.png" alt="user"></p>
+<h2 id="administrator">Administrator</h2>
+<p>Scope: the user has full overview over the organization&#39;s capabilities and users (can create users and assign different roles)</p>
+<p>Set permissions: select all permissions</p>
+<h2 id="developer">Developer</h2>
+<p>Scope: the user can create/ run environments/ factories etc. The Developer does not need the metadata or visibility on the users.</p>
+<p>Set permissions (you can customize them at your convenience):  ABORT_FACTORY_RUN, ALLOW_CUSTOM_TEMPLATES, ALLOW_EXPORT_ENVIRONMENT, ASSIGN_ROLE, BOOST_ENVIRONMENT, CLONE_STREAM, CREATE_COMPONENT, CREATE_ENVIRONMENT, CREATE_FACTORY, CREATE_ORG_METADATA, CREATE_PRODUCT, CREATE_ROLE, CREATE_STAGE, CREATE_STREAM, CREATE_USER, CREATE_USER_METADATA, DELETE_COMPONENT, DELETE_ENVIRONMENT, DELETE_STAGE, DELETE_STREAM, DELETE_USER_METADATA, MANAGE_COMPONENTS, MANAGE_PRODUCTS, MANAGE_ROLES, MANAGE_STAGES, MANAGE_STREAMS, REDEPLOY_ENVIRONMENT, SCHEDULE_ENVIRONMENT, SCHEDULE_FACTORY, SCHEDULE_FACTORY, START_ALL_ENVIRONMENT, START_ENVIRONMENT, START_FACTORY_RUN, STOP_ALL_ENVIRONMENT, STOP_ENVIRONMENT, UPDATE_ENVIRONMENT, UPDATE_FACTORY, UPDATE_ORG_METADATA, UPDATE_PRODUCT, UPDATE_ROLE, UPDATE_STAGE, UPDATE_STREAM, UPDATE_USER, UPDATE_USER_METADATA, VIEW_FACTORY_RUN_HISTORY</p>
+<h2 id="reader">Reader</h2>
+<p>Scope: the user has permission to see all records but cannot do any changes.</p>
+<p>Set permissions: MANAGE_STREAM, MANAGE_STAGES, MANAGE_PRODUCTS, MANAGE_FACTORIES, MANAGE_ENVIRONMENTS, MANAGE_USERS, MANAGE_ROLES, VIEW_FACTORY_RUN_HISTORY, MANAGE_ORG_METADATA, MANAGE_COMPONENTS</p>
+<div class="NOTE"><h5>Note</h5><p>Please note that by &#39;manage&#39; the user can only view the streams, stages, products, factories, environments, users, roles, the factory run history, organization metadata and components. A user with the &#39;reader&#39; role cannot edit anything. </p>
+</div>
+<p>All the roles can be customized to every user&#39;s needs.</p>
+<p>Depending on the organization role, a user may/ may not have several permissions (eg. if the organization does not have the assemble module, then the user will not be able to see the stages, the streams. The user will only see the environments, users and probably the metadata).</p>
+<h1 id="how-to-use-putty-ssh-client-for-ssh-key-generation">How to use PuTTY SSH client for SSH key generation.</h1>
+<p>Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
+<ul>
+<li><a href="https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/">https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/</a>)</li>
+</ul>
+<p>You can use any other SSH key generator client.</p>
+<div class="NOTE"><h5>Note</h5><p>If you already have installed a SSH key generator client, you can skip this step.</p>
+</div>
+<p>•   Download the installer from <a href="http://www.putty.org/" title="http://www.putty.org/">http://www.putty.org/</a></p>
+<p><img src="images/putty-download.png" alt="putty download"></p>
+<p>•   Run the installer and click <strong>Next</strong> on each screen, without changing anything in configurations. Click <strong>Finish</strong> once completed.</p>
+<h2 id="how-to-create-the-ssh-keys-pair-public-and-private-keys">How to create the SSH keys (pair public and private keys)</h2>
+<p>•   Open PuTTYgen and click Generate button:</p>
+<p><img src="images/putty-keygen.png" alt="putty keygen"></p>
+<p>•   This creates a new SSH key by moving the mouse in the blank area (highlighted in red), as per bellow picture.</p>
+<p><img src="images/putty-keygen-random.png" alt="generate ssh key"></p>
+<p>•   After PuTTYgen has finished the key generation, you can save your public key/private key in any location from your local machine.</p>
+<div class="NOTE"><h5>Note</h5><p>In order to have a valid SSH key that can be recognized by Infrastructure, do not use the Save public key button from PuTTygen and just select the whole public key from the PuTTYgen screen and save it in your local machine.</p>
+</div>
+<p><img src="images/putty-keygen-publickey.png" alt="save public key"></p>
+<p>•   From the PuTTYgen screen you must also save the private key. Press the Save private key button, choose &#39;Yes&#39; on the next prompt (save the key without a passphrase to protect it) and indicate a name and location for the private key.</p>
+<p><img src="images/putty-keygen-privatekey.png" alt="save private key"></p>
+<p>•   The public/private key location on your local machine should look like this:</p>
+<p><img src="images/putty-keygen-keyslocation.png" alt="public/private keys location"></p>
+<h2 id="how-to-add-users-on-the-portal-with-the-ssh-keys">How to add users on the portal with the SSH keys</h2>
 <div class="NOTE"><h5>Note</h5><p>All fields are mandatory!
 See further below how to generate the SSH key</p>
 </div>
@@ -138,37 +168,9 @@ See further below how to generate the SSH key</p>
 <ul>
 <li><p>Your username will be created in Gitlab server and public SSH key provided will be added to your account being accessible from all the environments created in your organisation.</p>
 </li>
-<li><p>For further details or issues related to Gitlab SSH keys usage, or other operating systems (MAC, Linux), please consult this link:  <a href="https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/">https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/</a></p>
+<li><p>For further details or issues related to Gitlab SSH keys usage, or other operating systems (MAC, Linux), please consult this link:  [https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/](</p>
 </li>
 </ul>
-<h1 id="user-roles-management">User Roles Management</h1>
-<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).
-The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
-<p><img src="images/create-user-role.png" alt="user"></p>
-<p>The admin can select which permissions to set to each user.
-<img src="images/create-user-role-permissions.png" alt="user"></p>
-<p>Once the role is created, the admin can assign it to a specific user:</p>
-<ul>
-<li>go to the &#39;Users&#39; tab and select the user </li>
-<li>choose from the drop-down list the user </li>
-<li>click &#39;Edit&#39; on the user</li>
-<li>choose from the drop-down list the role that needs to be assigned </li>
-</ul>
-<p>Please find below a set of recommended user roles for your organisation:</p>
-<p><img src="images/create-user-select-role.png" alt="user"></p>
-<h2 id="administrator">Administrator</h2>
-<p>Scope: the user has full overview over the organisation&#39;s capabilities and users (can create users and assign different roles)</p>
-<p>Set permissions: select all permissions</p>
-<h2 id="developer">Developer</h2>
-<p>Scope: the user can create/ run environments/ factories etc. The Developer does not need the metadata or visibility on the users.</p>
-<p>Set permissions (you can customize them at your convenience):  ABORT_FACTORY_RUN, ALLOW_CUSTOM_TEMPLATES, ALLOW_EXPORT_ENVIRONMENT, ASSIGN_ROLE, BOOST_ENVIRONMENT, CLONE_STREAM, CREATE_COMPONENT, CREATE_ENVIRONMENT, CREATE_FACTORY, CREATE_ORG_METADATA, CREATE_PRODUCT, CREATE_ROLE, CREATE_STAGE, CREATE_STREAM, CREATE_USER, CREATE_USER_METADATA, DELETE_COMPONENT, DELETE_ENVIRONMENT, DELETE_STAGE, DELETE_STREAM, DELETE_USER_METADATA, MANAGE_COMPONENTS, MANAGE_PRODUCTS, MANAGE_ROLES, MANAGE_STAGES, MANAGE_STREAMS, REDEPLOY_ENVIRONMENT, SCHEDULE_ENVIRONMENT, SCHEDULE_FACTORY, SCHEDULE_FACTORY, START_ALL_ENVIRONMENT, START_ENVIRONMENT, START_FACTORY_RUN, STOP_ALL_ENVIRONMENT, STOP_ENVIRONMENT, UPDATE_ENVIRONMENT, UPDATE_FACTORY, UPDATE_ORG_METADATA, UPDATE_PRODUCT, UPDATE_ROLE, UPDATE_STAGE, UPDATE_STREAM, UPDATE_USER, UPDATE_USER_METADATA, VIEW_FACTORY_RUN_HISTORY</p>
-<h2 id="reader">Reader</h2>
-<p>Scope: the user has permission to see all records but cannot do any changes.</p>
-<p>Set permissions: MANAGE_STREAM, MANAGE_STAGES, MANAGE_PRODUCTS, MANAGE_FACTORIES, MANAGE_ENVIRONMENTS, MANAGE_USERS, MANAGE_ROLES, VIEW_FACTORY_RUN_HISTORY, MANAGE_ORG_METADATA, MANAGE_COMPONENTS</p>
-<div class="NOTE"><h5>Note</h5><p>Please note that by &#39;manage&#39; the user can only view the streams, stages, products, factories, environments, users, roles, the factory run history, organisation metadata and components. A user with the &#39;reader&#39; role cannot edit anything. </p>
-</div>
-<p>All the roles can be customized to every user&#39;s needs.</p>
-<p>Depending on the organization role, a user may/ may not have serveral permissions (eg. if the organisation does not have the assemble module, then the user will not be able to see the stages, the streams. The user will only see the environments, users and probably the metadata).</p>
 <p><br></p>
               <hr>
               
