--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -105,16 +105,13 @@
                           <a href="techguides/user-creation-in-paas.html" name="" title="Create users">Create users</a>
                         </li>
                         <li>
-                          <a href="techguides/environment-creation-in-paas.html" name="" title="Create environments and organisations">Create environments and organisations</a>
+                          <a href="techguides/manage-environments.html" name="" title="Manage environments">Manage environments</a>
                         </li>
                         <li>
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
                         <li>
                           <a href="techguides/use-gitlab-repository.html" name="" title="Deploy features to environment">Deploy features to environment</a>
-                        </li>
-                        <li>
-                          <a href="techguides/make-updates-cloud.html" name="" title="Make Updates on Cloud Environment">Make Updates on Cloud Environment</a>
                         </li>
                         <li>
                           <a href="techguides/customize-templates.html" name="" title="Customize templates">Customize templates</a>
@@ -124,9 +121,6 @@
                         </li>
                         <li>
                           <a href="techguides/t24-development.html" name="" title="Develop T24 packages, plugins and Code">Develop T24 packages, plugins and Code</a>
-                        </li>
-                        <li>
-                          <a href="techguides/jenkins-build-promote-pipelines.html" name="" title="Use Jenkins to Build Pipelines">Use Jenkins to Build Pipelines</a>
                         </li>
                         <li>
                           <a href="techguides/clone-environment.html" name="" title="Clone an Environment">Clone an Environment</a>
