--- a/home/temenos-cloud-templates.html
+++ b/home/temenos-cloud-templates.html
@@ -80,11 +80,10 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<p><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" language="javascript" src="scripts/getTemplates.js"></script>
 <script type="text/javascript" language="javascript" src="scripts/getTemplateDetails.js"></script>
-<script type="text/javascript" language="javascript" src="scripts/js-yaml.min.js"></script>
-
+<script type="text/javascript" language="javascript" src="scripts/js-yaml.min.js"></script></p>
 <h2 id="how-do-the-cloud-templates-work">How do the cloud templates work?</h2>
 <p>The Temenos Continuous Deployment Platform has the capability to provision environments in a variety of different configurations. This capability is driven through the concept of &#39;Templates&#39; - a simplified view of the constituent elements which make up a sandbox configuration, including:</p>
 <ul>
@@ -95,8 +94,8 @@
 <p>Templates are used by the provisioning service to create Sandbox environments with the desired configuration, as shown below:</p>
 <p><img src="images/sandbox-templates.png" alt=""></p>
 <p>By default, new Templates are added with each monthly release of T24. These Templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
-<p>However, the Temenos Continuous Deployment Platform team also offer the ability to create customised Templates for clients. For more information, please contact <strong>CloudPlatformSupport@temenos.com</strong>.</p>
-<p>Furthermore, please find below the current templates catalogue. The standard configuration of each template can be explored by clicking the required template from the list.</p>
+<p>However, the Temenos Continuous Deployment Platform team also offer the ability to create customised Templates for clients. </p>
+<p>Furthermore, please find <strong><a href="http://documentation.temenos.cloud/home/temenos-cloud-templates-list.html?q=templa">here</a></strong> the current templates catalogue. The standard configuration of each template can be explored by clicking the required template from the list. </p>
 <ul id="templatesList" class="list-unstyled">
 </ul> 
 <p><br></p>
