--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -106,7 +106,7 @@ The administrator can create more users and navigate to the Roles section on the
 <li>click &#39;Edit&#39; on the user</li>
 <li>choose from the drop-down list the role that needs to be assigned </li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <strong>[here]</strong>(<a href="http://documentation.temenos.cloud/home/techguides/user-permissions">http://documentation.temenos.cloud/home/techguides/user-permissions</a>) to get an overview of the permissions.</p>
 <p>Please find below a set of recommended user roles for your organisation:</p>
 <p><img src="images/create-user-select-role.png" alt="user"></p>
 <h2 id="administrator">Administrator</h2>
