--- a/home/techguides/use-gitlab-repository.html
+++ b/home/techguides/use-gitlab-repository.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="introduction">Introduction</h1>
 
-<p>This document can be used by technical staff who need to deploy different features on a Temenos Continuous Deployment Environment. Each Environment has an associated Repository for uploading different type of features based on Environment Template type, these features being deployed automatically to your Environment.</p>
+<p>This document can be used by technical staff who need to deploy different features on a Temenos Continuous Deployment Environment. Each Environment has an associated Repository for uploading different type of features based on the Environment Template type, these features being deployed automatically to your Environment.</p>
 <p>Before proceeding, please check the following requirements:</p>
 <ul>
 <li>Make sure you have a GUI Git Client installed in your local machine. This guide uses <em>TortoiseGit</em> Git Client that can be installed from <a href="https://tortoisegit.org/download/" target="blank">here</a>.</li>
