--- a/home/techguides/fcm-configuration.html
+++ b/home/techguides/fcm-configuration.html
@@ -162,7 +162,7 @@
 <p><img src="images/fcm-sftp-auth.png" alt="sftp authentication"></p>
 <h2 id="process-messages-in-the-fcm-application">Process Messages in the FCM Application</h2>
 <ul>
-<li>On the right window, locate your envirnoment ID
+<li>On the right window, locate your environment ID
 <em>- Your organisation ID appears also on the top</em></li>
 </ul>
 <p><img src="images/fcm-sftp-id.png" alt="sftp id"></p>
