--- a/home/toc.html
+++ b/home/toc.html
@@ -147,7 +147,7 @@
                           <a href="export-import-database-video.html" name="" title="Export and Import a Database">Export and Import a Database</a>
                         </li>
                         <li>
-                          <a href="./deploy-features-to-an-environment-video.md" name="" title="Deploy Features to an Environment">Deploy Features to an Environment</a>
+                          <a href="deploy-features-to-an-environment-video.html" name="" title="Deploy Features to an Environment">Deploy Features to an Environment</a>
                         </li>
                         <li>
                           <a href="clone-environment-video.html" name="" title="Clone an Environment">Clone an Environment</a>
