--- a/home/techguides/use-gitlab-repository.html
+++ b/home/techguides/use-gitlab-repository.html
@@ -165,10 +165,10 @@
 </table>
 <h1 id="commit--push-features-to-repository">Commit &amp; Push features to Repository</h1>
 <p>•   Go to repository folder from your local machine(GitLabRepo folder in our example) and copy your file/files (related to your required features that must be deployed to your Environment) to the specific folder/folders based on your requirement. In this guide, an update is pushed to the Environment Repository.</p>
-<p>*&gt; Important: T24 Updates must be packaged as .zip of .zip file while it is deployed through the Git repository (the parent .zip file name can be anything). Example:</p>
+<p><em>Important: T24 Updates must be packaged as .zip of .zip file while it is deployed through the Git repository (the parent .zip file name can be anything). Example:</em></p>
 <blockquote><p>T24-updates.zip</p>
 <p>&nbsp; &nbsp; &nbsp; |__T24-Updates-2020-X-Y.zip</p>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |__ <em>.Jar</em></p>
+<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |__ *.Jar</p>
 </blockquote>
 <p><img src="images/repo_commit_1.png" alt="repo commit 1"></p>
 <p>•   To commit the files/files to Environment Repository, right click inside repository folder from your local machine and choose <strong>Git Commit -&gt; &quot;master&quot;...</strong> option.
