--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -94,8 +94,8 @@
 <p><img src="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\techguides\images\users-tab.png" alt=""></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
 <h1 id="user-roles-management">User Roles Management</h1>
-<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).
-The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
+<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
+<p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
 <p><img src="images/create-user-role.png" alt="user"></p>
 <p>The admin can select which permissions to set to each user.
 <img src="images/create-user-role-permissions.png" alt="user"></p>
